--- a/RabbitMqMessageStatusCheck/RabbitMqMessageStatusCheck.csproj
+++ b/RabbitMqMessageStatusCheck/RabbitMqMessageStatusCheck.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NDesk.Options" Version="0.2.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+  </ItemGroup>
+
 </Project>
